# darksky-observatory

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/stargazing_spots/: .env.example  Dockerfile  pyproject.toml
apps/stargazing_spots/scripts/: download_terrain_data.py
apps/stargazing_spots/stargazing_spots/: __init__.py  __main__.py  access_check.py  accessibility.py  acquisition.py  assess.py  change_detection.py  cloud_cover.py  enrichment.py  enrichment_raster.py  export.py  land_cover.py  observation_planning.py  processing.py  quality.py  reprojection.py  sensitivity.py  sky_view.py  skyglow.py  stac_catalog.py  suitability.py  uncertainty.py  validate.py
apps/stargazing_spots/tests/: test_cloud_cover.py  test_enrichment.py  test_observation_planning.py  test_processing.py  test_skyglow.py  test_suitability.py
docs/: architecture.md  data-sources.md  methodology.md  validation_report.md
notebooks/portugal/: 01_viirs_acquisition.ipynb  02_darksky_classification.ipynb  03_validation.ipynb
validation/portugal/: README.md  expert_recommended_spots.csv  stargazing_sites.csv
validation/portugal/darkskysites/: README.md  portugal_grid_sqm_2012_2025.json
validation/portugal/tess-ida/: .env.example  README.md  tess_station_summary.json
