[project]
name = "stargazing-spots"
version = "0.7.0"
description = "Earth Observation pipeline for dark-sky site identification using NASA VIIRS VNP46A4 nighttime radiance"
readme = {text = "Earth Observation pipeline for dark-sky site identification", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AstroTraveler" }]
keywords = [
    "earth-observation",
    "remote-sensing",
    "viirs",
    "nighttime-lights",
    "dark-sky",
    "geospatial",
    "stac",
]

dependencies = [
    "blackmarblepy>=2025.0",
    "geopandas>=1.0",
    "xarray>=2024.1",
    "rasterio>=1.4",
    "osmnx>=1.9",
    "pystac>=1.10",
    "shapely>=2.0",
    "numpy>=1.26",
    "h5py>=3.10",
    "scipy>=1.12",
    "joblib>=1.4",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
    "netcdf4>=1.6",
    "cdsapi>=0.7",
    "gcsfs>=2024.1",
    "dask>=2024.1",
    "zarr>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10", "nbstripout>=0.7"]
viz = ["matplotlib>=3.8", "cartopy>=0.22", "contextily>=1.5", "colorcet>=3.1", "folium>=0.16"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N806"]

[tool.ruff.lint.per-file-ignores]
"__main__.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stargazing_spots"]
